--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"devDependencies": {
 		"@types/node": "^20.12.4",
+		"@types/react": "^18.2.74",
 		"typescript": "^5.4.3"
 	},
 	"name": "rotating-gradients",
-	"version": "1.0.2",
+	"version": "1.1.2",
 	"description": "Rotate gradients easily",
 	"main": "app.js"
 }
